# Heat

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  run_server.py  temp_modbus_doc.txt  ~$道蠕动泵MODBUS通信协议.doc  多通道蠕动泵MODBUS通信协议.doc  多通道蠕动泵MODBUS通信协议.md
.trae/rules/: heat.md
config/: system_config.yaml
context/: PROJECT_CONTEXT.md
docs/: developer_guide.md  learning_path.md  lock_cleanup_usage.md  presentation.md  user_guide.md
experiments/: chemical_synthesis_A.yaml  pump_four_channel_demo.yaml  simple_heat_test.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
reference paper/: README.md  example.py
scripts/: chemical_synthesis_experiment.py  cleanup_locks.py  dual_heater_control.py  heater_only_experiment.py  heater_pump_integration.py  heater_pump_safe.py  pump_diagnose_labsmart.py  simple_control.py  temperature_experiment.py  test_connections.py  test_pump_flow.py  test_pump_only.py  test_pump_safe.py
src/: __init__.py  main.py
src/control/: __init__.py  program_controller.py
src/devices/: __init__.py  base_device.py  heater.py  peristaltic_pump.py  safe_pump.py
src/experiment/: actions.py  engine.py  executor.py  experiment_logger.py  parser.py
src/monitor/: __init__.py  data_monitor.py
src/protocols/: __init__.py  aibus.py  modbus_rtu.py  parameters.py  pump_params.py
src/reports/: __init__.py  report_generator.py
src/utils/: __init__.py  config.py  csv_logger.py  (+3 more)
tests/: diagnose.py  diagnose_pump.py  diagnose_ttl.py  test_hardware.py  test_heater.py
(+16 files in other folders)
